--- a/src/main/profiles/dcruz/resources/application.properties
+++ b/src/main/profiles/dcruz/resources/application.properties
@@ -1,7 +1,15 @@
-spring.jpa.show-sql=true
-spring.profiles.active=@spring.profiles.active@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.jpa.show-sql=true
+#spring.profiles.active=@spring.profiles.active@
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/peluapi
+spring.datasource.username=peluapi
+spring.datasource.password=peluapi
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # URL
 server.servlet.context-path=
