feat: added liquibase

--- a/src/main/profiles/dcruz/resources/application.properties
+++ b/src/main/profiles/dcruz/resources/application.properties
@@ -9,8 +9,15 @@ spring.datasource.password=peluapi
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # URL
 server.servlet.context-path=
 server.port=8080
+
+# Liquibase
+spring.liquibase.change-log=classpath:/db/dbchangelog.xml
+spring.liquibase.url=jdbc:mariadb://localhost:3306/peluapi
+spring.liquibase.user=peluapi
+spring.liquibase.password=peluapi
